@@ -1,5 +1,8 @@
 Release Notes
 
+* 6/17/2015
+  * added getPresignedURL
+
 * 5/18/2015
   * added logrotate.d
 
